# bloom

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows-build.yml
docs/: ci-trigger.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/audio/: NamEngine.cpp  NamEngine.h
